# SimpleNeuralNetworks

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.hpp
testing/: CMakeLists.txt  main.cpp
